--- a/crowdfunding-product-page-main/styles.css
+++ b/crowdfunding-product-page-main/styles.css
@@ -1,3 +1,11 @@
 body {
-    background-color: black;
+    margin: 0 auto;
+}
+
+/* Header */
+header {
+    width: 100vh;
+    height: 40vw;
+    background-image: url("images/image-hero-mobile.jpg");
+    background-size: auto;
 }
